...
  TextEditingController projectUrl = TextEditingController();

  @override
  Widget build(BuildContext context) {
    return SimpleOnboardingScreen(
      title: "Projekt\nbeitreten",
      buttonTitle: "Weiter",
      onButtonPress: () async {
        if (projectUrl.value.text.toLowerCase() ==
            "flammkuchen isst man hier auch gar nicht so oft") {
          // https://www.youtube.com/watch?v=UCL-eKVpfWk
          showCupertinoDialog(
              context: context,
...
            onPressed: () async {
              widget.callback.call(await OfflineBuilder().build());
            })
      ],
      child: Column(children: [
        TextInput(
          title: "Project-URL",
          hiddenTitle: "Project-URL",
          controller: projectUrl,
        ),
      ]),
    );
  }
...
